--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "dependencies": {
     "concurrently": "^5.3.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "kraken-api": "^1.0.0",
     "validator": "^10.11.0"
